--- a/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-main-form.css
+++ b/lecm-errands/share/src/main/webapp/css/lecm-errands/errands-main-form.css
@@ -142,3 +142,7 @@
     width: 90px;
 }
 
+.yui-skin-lecmTheme div.metadata-form.errands-main-form div.form-fields,
+.yui-skin-lecmTheme div.metadata-form.errands-main-form div.form-fields > div.set {
+	min-width: 0;
+}
