--- a/lecm-incoming/repo/src/main/config/reportdefinitions/deploy/jasper/incoming-statistics/incoming-statistics.jrxml
+++ b/lecm-incoming/repo/src/main/config/reportdefinitions/deploy/jasper/incoming-statistics/incoming-statistics.jrxml
@@ -12,7 +12,10 @@
 		<defaultValueExpression><![CDATA["ds-lecm-onk-incoming-type-stat.xml"]]></defaultValueExpression>
 	</parameter>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
-		<defaultValueExpression><![CDATA["reportdefinitions/deploy/jasper/lecm-onk-incoming-type-stat/subreports/"]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA["reportdefinitions/deploy/jasper/incoming-statistics/"]]></defaultValueExpression>
+	</parameter>
+	<parameter name="SUBREPORT_DATA_SOURCE" class="java.util.HashMap" isForPrompting="false">
+		<defaultValueExpression><![CDATA[new java.util.HashMap()]]></defaultValueExpression>
 	</parameter>
 	<queryString>
 		<![CDATA[]]>
@@ -24,13 +27,9 @@
 	<field name="col_DocKind" class="java.lang.String">
 		<fieldDescription><![CDATA[Тип документа]]></fieldDescription>
 	</field>
-	<variable name="grp_Type_SUM" class="java.lang.Integer" resetType="Group" resetGroup="grp_Kind" incrementType="Group" incrementGroup="grp_Subject" calculation="Sum">
-		<variableExpression><![CDATA[($F{col_DocType} == null || $F{col_DocType} == "") ?  0 : $V{grp_Type_COUNT}]]></variableExpression>
-		<initialValueExpression><![CDATA[0]]></initialValueExpression>
-	</variable>
-	<variable name="grp_Type_NULL_SUM" class="java.lang.Integer" resetType="Group" resetGroup="grp_Kind" incrementType="Group" incrementGroup="grp_Subject">
-		<variableExpression><![CDATA[($F{col_DocType} == null || $F{col_DocType} == "") ? $V{grp_Type_NULL_SUM} + 1 :  $V{grp_Type_NULL_SUM} + 0]]></variableExpression>
-		<initialValueExpression><![CDATA[0]]></initialValueExpression>
+	<variable name="documentsList" class="java.util.List">
+		<variableExpression><![CDATA[]]></variableExpression>
+		<initialValueExpression><![CDATA[new java.util.ArrayList()]]></initialValueExpression>
 	</variable>
 	<group name="grp_KindTotal">
 		<groupExpression><![CDATA[""]]></groupExpression>
@@ -110,11 +109,11 @@
 			</band>
 		</groupHeader>
 		<groupFooter>
-			<band height="280">
+			<band height="300">
 				<printWhenExpression><![CDATA[$V{REPORT_COUNT} >=0 && $F{col_DocKind} != null]]></printWhenExpression>
 				<stackedBar3DChart>
-					<chart isShowLegend="true" evaluationTime="Group" evaluationGroup="grp_KindTotal">
-						<reportElement uuid="af3daa4e-0d06-41e5-b1f0-66878a61410a" x="13" y="12" width="527" height="257">
+					<chart isShowLegend="true" evaluationTime="Report">
+						<reportElement uuid="596e422f-abcb-44a8-b3f2-8a490665a070" x="0" y="20" width="555" height="280">
 							<property name="net.sf.jasperreports.chart.range.axis.tick.interval" value="1"/>
 							<property name="net.sf.jasperreports.chart.domain.axis.tick.interval" value="1"/>
 						</reportElement>
@@ -126,7 +125,7 @@
 						<categorySeries>
 							<seriesExpression><![CDATA[$F{col_DocType} != null && $F{col_DocType} != "" ? $F{col_DocType} : "не указан"]]></seriesExpression>
 							<categoryExpression><![CDATA[$F{col_DocKind}]]></categoryExpression>
-							<valueExpression><![CDATA[$F{col_DocType} != null && $F{col_DocType} != "" ? $V{grp_Type_SUM} : $V{grp_Type_NULL_SUM}]]></valueExpression>
+							<valueExpression><![CDATA[new java.lang.Integer($P{SUBREPORT_DATA_SOURCE}.get($F{col_DocKind}.toLowerCase() + "_" + $F{col_DocType}).toString()) + 1]]></valueExpression>
 						</categorySeries>
 					</categoryDataset>
 					<bar3DPlot isShowLabels="true">
@@ -296,13 +295,13 @@
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font fontName="DejaVu Sans Mono"/>
 					</textElement>
-					<textFieldExpression><![CDATA[""]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$V{documentsList}.size()]]></textFieldExpression>
 				</textField>
 			</band>
 		</groupHeader>
 	</group>
-	<group name="grp_Type">
-		<groupExpression><![CDATA[(($F{col_DocType} != null && $F{col_DocType} != "") ? $F{col_DocType} : "_")]]></groupExpression>
+	<group name="grp_byType">
+		<groupExpression><![CDATA[$F{col_DocType}]]></groupExpression>
 	</group>
 	<title>
 		<band height="40" splitType="Stretch">
@@ -315,6 +314,20 @@
 			</staticText>
 		</band>
 	</title>
+	<detail>
+		<band>
+			<printWhenExpression><![CDATA[$V{REPORT_COUNT} >= 0 && $F{col_DocKind} != null]]></printWhenExpression>
+			<textField>
+				<reportElement uuid="193a1247-ee6a-427f-973e-5db0fe5f4605" x="0" y="0" width="129" height="0"/>
+				<textElement>
+					<font fontName="DejaVu Sans Mono"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{SUBREPORT_DATA_SOURCE}.get($F{col_DocKind}.toLowerCase() + "_" + $F{col_DocType}) == null ?
+$P{SUBREPORT_DATA_SOURCE}.put($F{col_DocKind}.toLowerCase() + "_" + $F{col_DocType}, 1) :
+$P{SUBREPORT_DATA_SOURCE}.put($F{col_DocKind}.toLowerCase() + "_" + $F{col_DocType}, new java.lang.Integer($P{SUBREPORT_DATA_SOURCE}.get($F{col_DocKind}.toLowerCase() + "_" + $F{col_DocType}).toString()) + new java.lang.Integer(1))]]></textFieldExpression>
+			</textField>
+		</band>
+	</detail>
 	<summary>
 		<band height="50">
 			<printWhenExpression><![CDATA[$V{REPORT_COUNT} < 1]]></printWhenExpression>
