Запись в бизнес-журнал событий входа/выхода пользователей и настройка записываемых категорий событий.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6258 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/base-menu/base-menu.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/base-menu/base-menu.css
@@ -51,6 +51,14 @@
     background: url('/share/res/images/lecm-dictionary/dictionary_32.png') no-repeat 4px 4px;
 }
 
+#lecm-menu #menu-buttons #menu-buttons-bj-archiver-settingsBtn span.first-child {
+    background: url('/share/res/images/lecm-dictionary/dictionary_32.png') no-repeat 4px 4px;
+}
+
+#lecm-menu #menu-buttons #menu-buttons-bj-logger-settingsBtn span.first-child {
+    background: url('/share/res/images/lecm-dictionary/dictionary_32.png') no-repeat 4px 4px;
+}
+
 /* ModelEditor menu */
 #lecm-menu #menu-buttons #menu-buttons-modelEditorHomeBtn span.first-child {
 	background: url('/share/res/images/lecm-statemachine-editor/home.png') no-repeat 4px 4px;
