--- a/lecm-incoming/repo/src/main/config/reportdefinitions/deploy/jasper/incoming-statistics/incoming-statistics.jrxml
+++ b/lecm-incoming/repo/src/main/config/reportdefinitions/deploy/jasper/incoming-statistics/incoming-statistics.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="lecm-onk-incoming-type-stat" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="0451b0fd-67d7-4d3d-be14-c579e2f885bb">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="incoming-statistics" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="0451b0fd-67d7-4d3d-be14-c579e2f885bb">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -14,9 +14,6 @@
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA["reportdefinitions/deploy/jasper/incoming-statistics/"]]></defaultValueExpression>
 	</parameter>
-	<parameter name="SUBREPORT_DATA_SOURCE" class="java.util.HashMap" isForPrompting="false">
-		<defaultValueExpression><![CDATA[new java.util.HashMap()]]></defaultValueExpression>
-	</parameter>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -27,9 +24,8 @@
 	<field name="col_DocKind" class="java.lang.String">
 		<fieldDescription><![CDATA[Тип документа]]></fieldDescription>
 	</field>
-	<variable name="documentsList" class="java.util.List">
-		<variableExpression><![CDATA[]]></variableExpression>
-		<initialValueExpression><![CDATA[new java.util.ArrayList()]]></initialValueExpression>
+	<variable name="TYPES_MAP" class="java.util.HashMap" calculation="System">
+		<initialValueExpression><![CDATA[new java.util.HashMap()]]></initialValueExpression>
 	</variable>
 	<group name="grp_KindTotal">
 		<groupExpression><![CDATA[""]]></groupExpression>
@@ -109,13 +105,12 @@
 			</band>
 		</groupHeader>
 		<groupFooter>
-			<band height="300">
+			<band height="320" splitType="Stretch">
 				<printWhenExpression><![CDATA[$V{REPORT_COUNT} >=0 && $F{col_DocKind} != null]]></printWhenExpression>
 				<stackedBar3DChart>
-					<chart isShowLegend="true" evaluationTime="Report">
-						<reportElement uuid="596e422f-abcb-44a8-b3f2-8a490665a070" x="0" y="20" width="555" height="280">
-							<property name="net.sf.jasperreports.chart.range.axis.tick.interval" value="1"/>
-							<property name="net.sf.jasperreports.chart.domain.axis.tick.interval" value="1"/>
+					<chart isShowLegend="true" evaluationTime="Page" renderType="draw">
+						<reportElement uuid="596e422f-abcb-44a8-b3f2-8a490665a070" stretchType="RelativeToTallestObject" x="0" y="20" width="555" height="300" isPrintWhenDetailOverflows="true">
+							<property name="net.sf.jasperreports.chart.range.axis.integer.unit" value="true"/>
 						</reportElement>
 						<chartTitle/>
 						<chartSubtitle/>
@@ -123,9 +118,9 @@
 					</chart>
 					<categoryDataset>
 						<categorySeries>
-							<seriesExpression><![CDATA[$F{col_DocType} != null && $F{col_DocType} != "" ? $F{col_DocType} : "не указан"]]></seriesExpression>
+							<seriesExpression><![CDATA[$F{col_DocType} != "" ? $F{col_DocType} : "не указан"]]></seriesExpression>
 							<categoryExpression><![CDATA[$F{col_DocKind}]]></categoryExpression>
-							<valueExpression><![CDATA[new java.lang.Integer($P{SUBREPORT_DATA_SOURCE}.get($F{col_DocKind}.toLowerCase() + "_" + $F{col_DocType}).toString()) + 1]]></valueExpression>
+							<valueExpression><![CDATA[$V{TYPES_MAP}.get($F{col_DocKind}.toLowerCase() + "_" + $F{col_DocType}) == null ? 1 : new java.lang.Integer($V{TYPES_MAP}.get($F{col_DocKind}.toLowerCase() + "_" + $F{col_DocType}).toString()) + 1]]></valueExpression>
 						</categorySeries>
 					</categoryDataset>
 					<bar3DPlot isShowLabels="true">
@@ -295,7 +290,7 @@
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font fontName="DejaVu Sans Mono"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$V{documentsList}.size()]]></textFieldExpression>
+					<textFieldExpression><![CDATA[""]]></textFieldExpression>
 				</textField>
 			</band>
 		</groupHeader>
@@ -322,9 +317,9 @@
 				<textElement>
 					<font fontName="DejaVu Sans Mono"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{SUBREPORT_DATA_SOURCE}.get($F{col_DocKind}.toLowerCase() + "_" + $F{col_DocType}) == null ?
-$P{SUBREPORT_DATA_SOURCE}.put($F{col_DocKind}.toLowerCase() + "_" + $F{col_DocType}, 1) :
-$P{SUBREPORT_DATA_SOURCE}.put($F{col_DocKind}.toLowerCase() + "_" + $F{col_DocType}, new java.lang.Integer($P{SUBREPORT_DATA_SOURCE}.get($F{col_DocKind}.toLowerCase() + "_" + $F{col_DocType}).toString()) + new java.lang.Integer(1))]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$V{TYPES_MAP}.get($F{col_DocKind}.toLowerCase() + "_" + $F{col_DocType}) == null ?
+$V{TYPES_MAP}.put($F{col_DocKind}.toLowerCase() + "_" + $F{col_DocType}, 1) :
+$V{TYPES_MAP}.put($F{col_DocKind}.toLowerCase() + "_" + $F{col_DocType}, new java.lang.Integer($V{TYPES_MAP}.get($F{col_DocKind}.toLowerCase() + "_" + $F{col_DocType}).toString()) + new java.lang.Integer(1))]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
