[+]страница-зашлушка для АРМ
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6280 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2629,3 +2629,7 @@ div.form-field table.formFieldControlParamsTable {
 .document-preview-cntrol .preview-select {
 	padding-bottom: 10px;
 }
+
+#no_menu_page #bd #lecm-page {
+    margin-left: 5px;
+}
