ALF-1859: Интерфейс редактирования настроек АРМов (справочника) - выбор типа запроса
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6300 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm.css
+++ b/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm.css
@@ -6,3 +6,13 @@
 .arm-metadata div.autocompleteCurrentValueDisplay {
 	margin-top: 10px;
 }
+
+.yui-skin-lecmTheme .arm-metadata .yui-menu-button button {
+	background-image:none;
+}
+
+.yui-skin-lecmTheme .arm-metadata .yui-menu-button {
+	border-color: #ccc;
+	border-style: solid;
+	border-radius: 3px;
+}
