[fix] ALF-1880 На форме "Изменение атрибутов документа" в поле "Содержание" отображается только часть значения, если оно состоит из большого количества символов. Добавлена вертикальная прокрутка
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6349 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/full-with-set.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/full-with-set.css
@@ -2,6 +2,7 @@
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit .full-width div.form-field textarea {
 	width: 650px;
 	overflow: hidden;
+	overflow-y: auto;
 }
 
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit div.yui-g div.yui-u .full-width div.form-field input[type=text]:not(.autocomplete-input),
