ALF-1852: Плывет верстка в форме редактирования свойств этапа договора
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6394 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/dnd-uploader-control.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/dnd-uploader-control.css
@@ -29,7 +29,7 @@
 }
 .dnd-uploader div.uploader-block {
     float: left;
-    margin: -12px 0 0 !important;
+    /*margin: -12px 0 0 !important;*/
 }
 .dnd-uploader div.uploader-block fieldset {
     width: 150px;
