ALF-1889: Значок удаления наезжает на описание выбранного документа на форме "Создание связи"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6395 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/components/document-metadata.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-metadata.css
@@ -23,3 +23,10 @@ div.association-auto-complete-selected-item > span.not-person,
 div.association-auto-complete-selected-item-even > span.not-person {
     overflow-x: inherit;
 }
+
+.yui-skin-lecmTheme .yui-panel div.form-field div.association-auto-complete-selected-item > span > a
+.yui-skin-lecmTheme .yui-panel div.form-field div.association-auto-complete-selected-item-even > span > a,
+.yui-skin-lecmTheme .yui-panel div.form-field div.association-auto-complete-selected-item > span.not-person,
+.yui-skin-lecmTheme .yui-panel div.form-field div.association-auto-complete-selected-item-even > span.not-person {
+    overflow-x: hidden;
+}
