[fix] ALF-1879. На форме "Создать входящий" заполнить поле "Способ доставки" значением, атрибуты 1-ого столбца сдвигаются и граница полей отсутствует
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6397 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/form-with-preview.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/form-with-preview.css
@@ -39,6 +39,7 @@
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit .from-with-preview div.yui-g div.yui-u .two-column div.form-field div.autocomplete-block div.autocompleteCurrentValueDisplayInvisible {
 	width: 160px;
 	overflow: hidden;
+    float: left;
 }
 
 .yui-skin-lecmTheme .yui-panel.metadata-form-edit .from-with-preview .two-column div.date-block + a,
