[fix] ALF-1865. На развернутой форме "Основные сведения" атрибуты смещены
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6398 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2633,3 +2633,18 @@ div.form-field table.formFieldControlParamsTable {
 #no_menu_page #bd #lecm-page {
     margin-left: 5px;
 }
+
+.yui-skin-lecmTheme .form-container .incomplete-warning
+{
+    margin-left: auto;
+}
+
+.yui-skin-lecmTheme .form-container .incomplete-warning img
+{
+    display: none;
+}
+
+.yui-skin-lecmTheme .form-container .incomplete-warning .viewmode-label
+{
+    color: red;
+}
