[fix] ALF-1899. В отчет "Журнал регистрации входящих документов" попадают входящие, котрые выходят за границы указанного диапазона
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6455 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-incoming/repo/src/main/config/reportdefinitions/deploy/jasper/incoming-reg-journal/incoming-reg-journal.jrxml
+++ b/lecm-incoming/repo/src/main/config/reportdefinitions/deploy/jasper/incoming-reg-journal/incoming-reg-journal.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="lecm-onk-incoming-journal" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="26518244-bf79-4d71-992b-ad68c414fc5a">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="lecm-incoming-journal" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="26518244-bf79-4d71-992b-ad68c414fc5a">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -14,10 +14,10 @@
 		<defaultValueExpression><![CDATA["select * from lecm-contract:document as Contract"]]></defaultValueExpression>
 	</parameter>
 	<parameter name="CMIS_XMLCONFIG" class="java.lang.String" isForPrompting="false">
-		<defaultValueExpression><![CDATA["ds-lecm-onk-incoming-journal.xml"]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA["ds-lecm-incoming-journal.xml"]]></defaultValueExpression>
 	</parameter>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
-		<defaultValueExpression><![CDATA["reportdefinitions/deploy/jasper/lecm-onk-incoming-journal/subreports/"]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA["reportdefinitions/deploy/jasper/lecm-incoming-journal/subreports/"]]></defaultValueExpression>
 	</parameter>
 	<queryString>
 		<![CDATA[]]>
