--- a/lecm-eds-documents/share/src/main/webapp/css/lecm-outgoing/global-settings.css
+++ b/lecm-eds-documents/share/src/main/webapp/css/lecm-outgoing/global-settings.css
@@ -1,9 +1,9 @@
-.outgoing-docs-settings
+.eds-global-settings
 {
 	margin: 16px 10px 10px;
 }
 
-.outgoing-docs-settings .title
+.eds-global-settings .title
 {
 	font-size: 123.1%;
 	font-weight: bold;
