[~]заготовка для тулбара в АРМ
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6491 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
+++ b/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
@@ -6,3 +6,9 @@
 #bd #lecm-content-main #arm-tree {
     margin: 0 5px;
 }
+
+.datalist-toolbar .filters span.first-child
+{
+    background: url(/share/res/components/images/add-row-16.png) no-repeat 12px 4px;
+    padding-left: 24px;
+}
