Заготовка под раскрывающиеся таблицы
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6527 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/datagrid.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/datagrid.css
@@ -98,3 +98,13 @@
 	color: #333;
     font-weight: bold;
 }
+
+.datagrid .expand-table-icon {
+	cursor: pointer;
+	/*font-family:Arial;*/
+	font-size:18px;
+	/*font-weight:normal;*/
+	/*font-style:normal;*/
+	/*text-decoration:none;*/
+	/*color:#333333;*/
+}
