--- a/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
+++ b/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
@@ -12,3 +12,32 @@
     background: url(/share/res/components/images/add-row-16.png) no-repeat 12px 4px;
     padding-left: 24px;
 }
+
+#yui-main .arm-filters-bar .datalist-toolbar {
+	background-color: #ffffcc;
+	border: 1px solid #797979;
+	height: 40px;
+}
+
+.arm-filters-bar .datalist-toolbar .header-bar > div {
+	padding-top: 10px;
+	padding-left: 10px;
+}
+
+.arm-filters-bar .arm-filters-label a {
+	font-size: 11px;
+}
+
+.arm-filters-bar .arm-filter-item {
+	font-size: 11px;
+	font-style: italic;
+	color: #999999;
+	padding: 0 10px;
+}
+
+.arm-filters-bar .arm-filter-item .arm-filter-remove {
+	padding-left: 5px;
+	cursor: pointer;
+	font-style: normal;
+	color: #666666;
+}
