--- a/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
+++ b/lecm-arm/share/src/main/webapp/css/lecm-arm/lecm-arm-documents.css
@@ -7,12 +7,6 @@
     margin: 0 5px;
 }
 
-.datalist-toolbar .filters span.first-child
-{
-    background: url(/share/res/components/images/add-row-16.png) no-repeat 12px 4px;
-    padding-left: 24px;
-}
-
 #yui-main .arm-filters-bar .datalist-toolbar {
 	background-color: #ffffcc;
 	border: 1px solid #797979;
@@ -40,4 +34,10 @@
 	cursor: pointer;
 	font-style: normal;
 	color: #666666;
+}
+
+.datalist-toolbar .filters span.first-child
+{
+    background: url('/share/res/images/lecm-arm/filter-16.png') no-repeat 12px 4px;
+    padding-left: 24px;
 }
