ALF-1897 Обеспечить возможность выбора шаблона отчета пользователем - Интерфейс в РО
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6582 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
+++ b/lecm-reports-editor/share/src/main/webapp/css/lecm-reports-editor/report-editor.css
@@ -28,6 +28,14 @@ report-editor-sourcesList #alf-filters .grid tr.yui-dt-highlighted {
     background-image: url("/share/res/images/lecm-reports-editor/select-source-16.png");
 }
 
+.datagrid .onActionExport a {
+    background-image: url("../../images/lecm-dictionary/xml-file-16.png");
+}
+
+.datagrid .onActionSave a {
+    background-image: url("/share/res/images/lecm-reports-editor/select-source-16.png");
+}
+
 .reports-editor-panel {
     border-bottom: 1px solid #D9D9D9;
     margin: 0 -10px;
@@ -116,10 +124,10 @@ div[id*="reports-editor-navigation-toolbar"] .toolbar
     background-image: url("/share/res/components/images/header/trashcan.png");
 }
 
-.datalist-toolbar .export-template button {
+/*.datalist-toolbar .export-template button {
     background: url("../../images/lecm-dictionary/xml-file-16.png") no-repeat scroll 5px 5px transparent;
     cursor: pointer;
-}
+}*/
 
 div[id*="report-settings"] div.form-field input[type="text"],
 div[id*="report-settings"] div.form-field select,
